--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,19 @@ header {
     margin: 0px;
 }
 
+/* Logo */
+
+.logo {
+    display: flex;
+    align-items: center;
+    width: 50.98px;
+    height: 56px;
+    top: 16px;
+    left: 1469.47px;
+}
+/* Logo */
+/* Menu */
+
 nav ul {
     display: flex;
     list-style: none;
@@ -53,20 +66,13 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-   color:rgb(219, 51, 113);
+   color:rgb(93, 212, 131);
 
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    width: 50.98px;
-    height: 56px;
-    top: 16px;
-    left: 1469.47px;
-}
+/* Menu */
 
-/* Banner  rgba(229, 229, 229, 0.611); */
+/* Banner */
 
 .banner {
     display: flex;
@@ -122,6 +128,7 @@ img {
     text-align: left;
 }
 
+
 .inforvinho {
     font-family: 'Lato', sans-serif;
     line-height: 16px;
@@ -140,6 +147,7 @@ img {
     font-family: 'Lato', sans-serif;
     text-align: left;
     margin-left: 70px;
+    margin-bottom: 65px;
    
 }
 
@@ -157,21 +165,21 @@ text-align: left;
 p {
     font-size: 12px;
 }
-p:nth-child(1) {
+
+.format1 {
     color:#888888;
     line-height: 10px;
-    
 }
 
-p:nth-child(4) {
+.format2 {
     font-size: 12px;
     line-height: 10px;
-    
 }
-p:nth-child(2) {
+
+.format3 {
     color:#B6116E;
-    
 }
+
 
 /* Paragrafos */
 
@@ -180,7 +188,7 @@ p:nth-child(2) {
 .grupobtn {
     width: 156px;
     height: 40px;
-    background-color: #B6116E;
+    background-color:#e20080;
     border: none;
     color: white;
     border-radius: 5px;
@@ -191,7 +199,7 @@ p:nth-child(2) {
 }
 
 .grupobtn:hover {
-    background-color: #e20080;
+    background-color: #87225d;
     cursor: pointer;
 }
 /* Estilização Botão(2) */
@@ -214,3 +222,9 @@ p:nth-child(2) {
 }
 
 /* Estilização Botão(2) */
+
+@media screen and (min-width: 992px) {
+
+
+}
+    
