--- a/css/style02.css
+++ b/css/style02.css
@@ -1,37 +1,88 @@
-
 * {
-    margin: 0px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    user-select: none;
+    box-sizing: border-box;
+    font-family: 'Lato';
+
 }
 
-header {
-    background-color: rgba(255, 255, 255, 0.582);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.326);
-    margin: 0px;
-    
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+:root {
+
+    --cor-fundo: #951717;
+
 }
 
-.container02 {
+body {
+    background-color: var(--cor-fundo);
     display: flex;
     align-items: center;
-    margin: 0px;
-    padding: 15px;
-    
+    justify-content: center;
+    min-height: 100vh;
+    font-family: 'Lato';
 }
 
-.vinho {
+.carrinho {
+    width: 352px;
+    height: min-content;
+    padding: 35px;
+    background-color: #F5F5F5;
+}
+
+.carrinho .cabecalho-carrinho {
+
     display: flex;
-    padding: 20px;
-    margin-top: 15px;
-    width: 300px;
-    height: 200px;
-    background-color: #f0f0f0;
-    padding: 20px;
+    align-items: center;
+
+
 
 }
 
-section div p {
-    margin: 10px;
-    font-size: 15px;
+.carrinho .cabecalho-carrinho button {
 
+    cursor: pointer;
+    font-size: 3em;
+    background-color: #F5F5F5;
+    line-height: 25%;
+
+}
+
+.carrinho .cabecalho-carrinho h3 {
+    margin-left: 15px;
+    font-family: 'lato';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.83px;
+    text-align: left;
+
+}
+
+.carrinho .carrinho-item {
+    position: relative;
+    width: 100%;
+    margin: 30px 0 ;
+    background-color: #fff;
+    box-shadow:0px 1px 5px rgb(0 0 0 / 16%);
+}
+
+.carrinho .carrinho-item .imagem {
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
+    background-color: rgba(252, 252, 12, 0.748);
+}
+
+.carrinho .carrinho-item img {
+    width: 90%;
+}
+
+.carrinho .carrinho-item .info {
+    
 }
 
