--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,17 @@
 @charset "UTF-8";
 
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
 }
 
 body {
-   background-color: #F5F5F5;
-   font-family: 'Lato, san-serife';
+    background-color: #F5F5F5;
+    font-family: 'Lato, san-serife';
 }
 
 
@@ -26,47 +23,50 @@ header {
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: white;
-    padding: 10px;
-    margin: 0px;
+    height: 88px;
+    width: 100%;
 }
 
-/* Logo */
+/* Logo / Icone*/
 
 .logo {
     display: flex;
     align-items: center;
-    width: 50.98px;
-    height: 56px;
-    top: 16px;
-    left: 1469.47px;
+    width: 102.97px;
+    height: 31px;
+
 }
+
+.icone-svg img {
+    width: 55.98px;
+    height: 56px;
+}
+
 /* Logo */
 /* Menu */
 
 nav ul {
     display: flex;
     list-style: none;
-    padding: 0px;
     align-items: center;
-    margin-left: 44px;
-
+    gap: 0.7em;
 }
 
 nav ul li a {
-    
+    padding: 10px;
     text-decoration: none;
-    margin: 15px;
-    color: black;
-    font-size: 18px;
-    line-height: 24px; 
-
-
+    color: #666666;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
 }
 
 nav ul li a:hover {
-   color:rgb(93, 212, 131);
+    color: rgb(93, 212, 131);
 
 }
 
@@ -77,51 +77,60 @@ nav ul li a:hover {
 .banner {
     display: flex;
     justify-content: center;
-    margin: 50px;
+    margin: 20px 0;
 }
 
-img {
+.banner img {
     max-width: 100%;
     max-height: 100%;
 }
 
 /* Banner */
 
-/* Caixa (1) */
+.margin-top-bottom {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+.row {
+    display: flex;
+    max-width: 100%;
+    justify-content: center;
+    width: 100%;
+    margin: 10px;
+    gap: 10px;
+    flex-wrap: wrap;
+}
 
 .vinho {
     display: flex;
     background-color: #ffffff;
     align-items: center;
+    justify-content: space-evenly;
+    box-shadow: 0px 2px 5px 0px #0000000D;
+    max-width: 100%;
     width: 380px;
     height: 210px;
-    box-shadow:0px 1px 5px rgb(0 0 0 / 16%);
-    margin: 10px;
-    max-width: 100%;
-    box-sizing: border-box;
+    gap: 5px;
 }
 
 /* Caixa (1) */
 
 /* Bloco (1) */
 
-.blocogeral {
-    display: flex;
-    max-width: 100%;
-    justify-content: center;
-}
-
-/* Bloco (1) */
-
 .vinho img {
+    margin-top: 12px;
     width: 133px;
-    height: 200px ;
+    height: 176px;
 }
 
 
 .dadosvinho {
     line-height: 31px;
-    
+
 }
 
 .blocointerno {
@@ -133,51 +142,61 @@ img {
     font-family: 'Lato', sans-serif;
     line-height: 16px;
     text-align: left;
-    margin-left: 70px;
 
 }
 
-.inforvinho p {
-    margin-bottom: 5px;
-    margin-top: 8px;
-}
-
-#inforvinho2 {
-    font-family: 'Lato', sans-serif;
+.inforvinho h3 {
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: -0.20000000298023224px;
     text-align: left;
-    margin-left: 70px;
-    margin-bottom: 65px;
-   
+
 }
 
-div > h3 {
-font-family: 'Lato';
-font-size: 14px;
-text-align: left;
+#inforvinho2 h3 {
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: -0.20000000298023224px;
+    text-align: left;
 
 }
 
 /* Paragrafo */
 
-p {
-    font-size: 12px;
-}
-
 .format1 {
-    color:#888888;
-    line-height: 10px;
+    margin-top: 30px;
+    color: #888888;
+    font-family: Lato;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0px;
+    text-align: left;
 }
 
 .format2 {
+    font-family: Lato;
     font-size: 10px;
+    font-weight: 700;
     line-height: 10px;
-    font-weight: bold;
+    letter-spacing: 0px;
+    text-align: left;
+    color: black;
+    margin-top: 10px;
 }
 
 .format3 {
-    color:#B6116E;
-    font-weight: bold;
+    color: #B6116E;
     font-size: 10px;
+    font-weight: 600;
+}
+
+.format3 span {
+    font-size: 15px;
 }
 
 
@@ -185,46 +204,90 @@ p {
 
 /* Estilização Botão(1) */
 
-.grupobtn {
-    width: 156px;
-    height: 40px;
-    background-color:#e20080;
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 17px;
+    background-color: #e20080;
     border: none;
     color: white;
     border-radius: 5px;
-    padding: 10px;
+    padding: 17px;
     margin-top: 7px;
+    cursor: pointer;
+
+}
+
+.btn:hover {
+    background-color: #87225d;
+}
+
+.btn-secondary {
+    background: #A0A0A0;
+
+}
+
+.btn-secondary:hover {
+    background: #6d6d6d;
+}
+
+.btn-mobile {
+    display: none;
+}
+
+/* Estilização Botão(2) */
+
+@media screen and (max-width: 780px) {
+
+    .container {
+        justify-content: space-between;
+        background-color: white;
+        padding:10px 0;
+        width: 100%;
+        height: 66px;
+    }
+
+    .row {
+        flex-direction: column;
+        margin: 0 auto;
+        align-items: center;
+        gap: 4px;
+    }
+
+    nav ul {
+        display: none;
+    }
+
+    .vinho {
+        height: auto;
+        gap: 5px;
+        width: 180px;
+        flex-direction: column;
+        margin-top: 12px;
+    }
+
+    .inforvinho {
+        margin-bottom: 10px;
+    }
+
+    .inforvinho h3 , .format1 {
+        text-align: center;
+    }
+ 
    
 
+    .vinho button {
+        display: none;
+    }
+
+    .btn-mobile {
+        display: flex;
+        max-width: 180px;
+        width: 100%;
+        height: 40px;
+        margin-top: 4px;
+
+    }
 }
-
-.grupobtn:hover {
-    background-color: #87225d;
-    cursor: pointer;
-}
-/* Estilização Botão(2) */
-#grupobtn2 {
-    background-color:#A0A0A0;
-    width: 156px;
-    height: 40px;
-    border: none;
-    color: white;
-    border-radius: 5px;
-    box-shadow: 0px 5px 10px 0px #00000026;
-    margin-top: 10px;
-
-    
-}
-
-#grupobtn2:hover {
-    background-color: #6d6d6d;
-    cursor: pointer;
-}
-
-/* Estilização Botão(2) */
-
-@media screen and (min-width: 992px) {
-
-
-}
-    
